# crawler

./: .env.example  .gitignore  README.md  pyproject.toml
src/: app.py
src/crawler/: __init__.py  app.py  core.py
tests/: test_app.py
tests/crawler/: test_core.py
